# weighted-straight-skeleton

./: .gitignore  .npmrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.build.json  webpack.config.js
src/core/: CMakeLists.txt  install_libraries.sh  main.cpp
src/example/: index.html  index.ts
src/wrapper/: index.ts
